# chilean-town-names-newgrf

./: build.py  chilean-town-names.grf  chilean-town-names.nml  custom_tags.txt  grf.grf  pyproject.toml
lang/: english.lng  spanish.lng
