[tool.poetry]
name = "chilean-town-names-newgrf"
version = "0.1.0"
description = ""
authors = ["Nicolás Lemuñir <nicolas.lemunir2112@gmail.com>"]
readme = "README.md"
packages = [{include = "chilean-town-names-newgrf"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
nml = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
